--- a/Assignment FINAL.ipynb
+++ b/Assignment FINAL.ipynb
@@ -31,42 +31,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #1"
+    "### Basics Assignment #1\n",
+    "\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #2"
+    "### Basics Assignment #2\n",
+    "\n",
+    "First, import the libraries you need for reading in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for your work: this can be anything, but will work best if it's a static site (not a social media hashtag, etc.)\n",
+    "\n",
+    "```\n",
+    "import urllib.request, urllib.error, urllib.parse\n",
+    "\n",
+    "url = 'https://researchguides.dartmouth.edu/filmstudies/adaptations'\n",
+    "\n",
+    "response = urllib.request.urlopen(url)\n",
+    "webContent = response.read()\n",
+    "HTML = response.read()\n",
+    "\n",
+    "print(webContent[0:1000])\n",
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #3"
+    "### Basics Assignment #3\n",
+    "\n",
+    "\n",
+    "Next, splice the content you've imported to include only the primary text of interest. \n",
+    "You'll need to investigate the website you are looking at and choose strategically what tags you look for to define the starting and ending location of your splice. \n",
+    "Build on the model in CleaningHTML.ipynb\n",
+    "\n",
+    "```\n",
+    "\n",
+    "contents = str(webContents)\n",
+    "startLoc = contents.find(\"<div class=\\\"expandable-search__target \")\n",
+    "endLoc = contents.find(\"<div class=\\\"a-content a-content--left-space \")\n",
+    "\n",
+    "print(startLoc)\n",
+    "print(endLoc)\n",
+    "\n",
+    "contents = contents[startLoc: endLoc]\n",
+    "print(contents[0: 500])\n",
+    "```\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #4"
+    "\n",
+    "### Basics Assignment #4\n",
+    "\n",
+    "Next, we'll use stop words to remove all the words that we don't want to include in our count. There are suggested words in this week's readings, \n",
+    "but you can also generate a custom list based on your topic. Define the stop words in an array, \n",
+    "and use a loop to remove any word in your bag of words that also appears on the stop words list (use the examples in Dictionaries for guidance.)\n",
+    "\n",
+    "```\n",
+    "stop_words = ['a','of','my','up','rom','com','how','was','remotelyhow','set','was','by','k','ritmanplus','iconalex','ritmanu','k','correspondentmore', 'got','tip','u','for','and']\n",
+    "def removeStopWords(word_bag, stop_words):\n",
+    "    return [w for w in word_bag if w not in stop_words]\n",
+    "\n",
+    "cleaned_words = removeStopWords(word_bag, stop_words)\n",
+    "\n",
+    "print(cleaned_words[0:50])\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #5"
+    "### Basics Assignment #5\n",
+    "\n",
+    "\n",
+    "\n",
+    "Bonus: Export a Meaningful Visualization\n",
+    "\n",
+    "Since I had success with the pie chart aspects above, I decided to bring familiarity toward the Bonus area toward meaningful visualization. As s result, incorporating other sites to illustrate allowed for a way to secure the figure (get_figure) from my past familiarity with the pie aspects from challenge #4. Then by bringing in the coded command (savefig) to help create a workable range of filetypes, including an increased parameter to allow the freedom of text to be expanded with minor limitations within the visual.\n",
+    "\n",
+    "```\n",
+    "fig = df['title'][0:10].value_counts().plot(kind='pie', title='Top 10 Films').get_figure()\n",
+    "fig.savefig('top10films.png', dpi=600, bbox_inches='tight')\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #6"
+    "### Basics Assignment #6\n",
+    "\n",
+    "Stage Four: Convert from Dictionary to DataFrame and Display¶\n",
+    "Converting Dictionary to DataFrame enabled the areas of interest and attention to be more organized within the displayed objectives. This process helped my research focus on data and material that may benefit goals and access of interest.¶\n",
+    "\n",
+    "```\n",
+    "articles = pd.DataFrame(article_dict)\n",
+    "pd.set_option(\"display.max_colwidth\", None)\n",
+    "\n",
+    "articles\n",
+    "```\n"
    ]
   },
   {
@@ -80,49 +158,232 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #8"
+    "### Basics Assignment #8\n",
+    "\n",
+    "Stage One: Import Structured CSV Data (bonus: from multiple files)\n",
+    "Blockbusters.csv was imported and placed into a file to help avoid any error toward access through the use of separation. And with the use of Pandas, the tone was set to decipher and explore initial areas and trends within Blockbusters.csv set as the data frame in question housed in the folder formed \"busters.\" As metadata in the form of text formated documents has the potential to create value when they are kept \"in a tabular format\" (Karsdorp, Kestemont, and Riddell 126).\n",
+    "\n",
+    "```\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "path = \"busters/\"\n",
+    "years = []\n",
+    "df_list = []\n",
+    "\n",
+    "with os.scandir(path) as entries:\n",
+    "    for entry in entries:\n",
+    "        years.append(entry.name)\n",
+    "        temp_df = pd.read_csv(f'{path}{entry.name}')\n",
+    "        df_list.append(temp_df)\n",
+    "        \n",
+    "print(years[0])\n",
+    "print(df_list[0].head())\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #9"
+    "### Basics Assignment #9\n",
+    "\n",
+    "And for symbolic reference with alternative visual, the use of the negative component of marriage 'divorce' was used to create a pie chart semblance counter with \"performance_counts = df['divorce'].value_counts().\" Where the discovery of \"value_counts()\" traditionally \"leaves out NaN values\" (Karsdorp, Kestemont, Riddell 27). Allowing for the reference exploration toward the use of \"Yes\" vs. \"No\" with little hindrance to help counteract the research exploration of the data, which became potently visual.\n",
+    "\n",
+    "```\n",
+    "performance_counts = df['divorce'].value_counts()\n",
+    "labels=[\"Yes\",\"No\"]\n",
+    "colors=[\"#52ffff\",\"#11ff44\"]\n",
+    "explode = (0, 0.1)\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "ax1.pie(performance_counts, explode=explode, labels=labels, colors=colors, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax1.axis('equal')  \n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #10"
+    "### Basics Assignment #10\n",
+    "Stage Five: Use at least one data visualization from a previous exercise, demo, or the course text to analyze a different element of your tweets.\n",
+    "Today, most \"geographical maps using the package Cartopy, ...is Python's (emerging) standard for geospatial data processing and analysis\" (Karsdorp, Kestemont, and Riddell 230). And with the use of a \"Python library Cartopy... \" demonstrated how ...maps can help communicate a historical narrative (Karsdorp, Kestemont, and Riddell 244). Now we are able to plot a solution and move toward the bonus challenge of charting user interaction. And it was a bit realizing and humorous that along with the map, one location was visualized appropriately residing in Washington DC. The capital of the US.\n",
+    "\n",
+    "Note: there is an option to pull data used toward Geographic concentrations related to locations -but not necessarily where the tweets are coming from.\n",
+    "```\n",
+    "import cartopy.crs as ccrs\n",
+    "from matplotlib.patches import Circle\n",
+    "\n",
+    "ax = plt.axes(projection=ccrs.PlateCarree())\n",
+    "ax.stock_img()\n",
+    "    \n",
+    "for i in range(0, len(lats)):\n",
+    "    ax.plot(longs[i], lats[i], 'ro', transform=ccrs.PlateCarree())\n",
+    "                                                                                    \n",
+    "ax.coastlines(resolution='50m')\n",
+    "ax.set_global()\n",
+    "\n",
+    "plt.show()\n",
+    "```\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #11"
+    "### Basics Assignment #11\n",
+    "\n",
+    "Stage Three: Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
+    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow for the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. large document use or handling].\n",
+    "\n",
+    "```\n",
+    "def load_directory(directory):\n",
+    "    documents, titles = [], []\n",
+    "    for filename in os.scandir(directory):\n",
+    "        #change this to analyze a different component after changing the save above\n",
+    "        if not filename.name.endswith('-nouns.txt'):\n",
+    "            continue\n",
+    "\n",
+    "        with open(filename.path) as f:\n",
+    "            contents = f.read()\n",
+    "        lemmas = contents.lower().split()\n",
+    "\n",
+    "        documents.append(' '.join(lemmas))\n",
+    "        title = filename.name.replace('-nouns.txt', '')\n",
+    "        titles.append(f\"{title}\")\n",
+    "    return documents, titles\n",
+    "    ```\n",
+    "    \n",
+    "\n",
+    "    ```\n",
+    "    documents, titles = load_directory(textdir)\n",
+    "import sklearn.feature_extraction.text as text\n",
+    "print(titles[0:6])\n",
+    "\n",
+    "vectorizer = text.CountVectorizer(max_features=30, token_pattern=r\"(?u)\\b\\w+\\b\")\n",
+    "v_documents = vectorizer.fit_transform(documents).toarray()\n",
+    "\n",
+    "print(v_documents.shape)\n",
+    "print(vectorizer.get_feature_names()[:10])\n",
+    "```\n",
+    "\n",
+    "['Hollywood Reporter Aug. 11, 2021', 'Hollywood Reporter Aug. 23, 2021', 'Hollywood Reporter Aug. 5, 2021', 'Hollywood Reporter July 21, 2021', 'Hollywood Reporter June 17, 2021', 'Hollywood Reporter June 30, 2021']\n",
+    "(11, 30)\n",
+    "['business', 'comedy', 'company', 'director', 'e', 'family', 'film', 'ing', 'lot', 'movie']\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #12"
+    "### Basics Assignment #12\n",
+    "\n",
+    "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291).\n",
+    "\n",
+    "```\n",
+    "words = topic_word_distributions.loc['Topic 2'].sort_values(ascending=False).head(18)\n",
+    "words \n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "print(topic_word_distributions.loc['Topic 2'].head(20))\n",
+    "\n",
+    "# Create and generate a word cloud image:\n",
+    "wordcloud = WordCloud().generate_from_frequencies(words)\n",
+    "\n",
+    "# Display the generated image:\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #13"
+    "### Basics Assignment #13\n",
+    "\n",
+    "Stop words associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization,\"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently.\n",
+    "\n",
+    "```\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "stopwords = set(STOPWORDS)\n",
+    "stopwords.update([\"walking\",\"dead\",\"telltale\",\"kill\"])'\n",
+    "```\n",
+    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193).\n",
+    "\n",
+    "```\n",
+    "string = pd.Series(cleaned_reviews).str.cat(sep=' ')\n",
+    "wordcloud = WordCloud(width=1600, stopwords=stopwords,height=1000,max_font_size=250,max_words=100,collocations=False, background_color='blue').generate(string)\n",
+    "plt.figure(figsize=(40,30))\n",
+    "plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #14"
+    "### Basics Assignment #14\n",
+    "\n",
+    "Collection\n",
+    "Describe your data collection scope and process briefly, and include an example of how you might collect your data drawing on our other projects. For example, if this workflow will collect Twitter data from a stream, you might revisit that demo, copy the stream, and adjust the hashtag.\n",
+    "\n",
+    "```\n",
+    "# We'll need to extract our text from our novels, and we'll use regular expressions to start cleaning it of the Gutenberg header and footer \n",
+    "\n",
+    "up_to_word = \"Contents\"\n",
+    "after_word = \"***\"\n",
+    "rx_to_first = r'^.*?{}'.format(re.escape(up_to_word))\n",
+    "text = \"\"\n",
+    "import os\n",
+    "path = 'texts/'\n",
+    "with os.scandir(path) as entries:\n",
+    "    temporary = \"\"\n",
+    "    for entry in entries:\n",
+    "        print(entry.name)\n",
+    "        f = open(f'{path}\\{entry.name}',encoding='utf-8-sig')\n",
+    "        temporary += f.read()\n",
+    "        temporary = (re.sub(rx_to_first, '', temporary, flags=re.DOTALL).strip())\n",
+    "        temporary = temporary[:temporary.index(after_word) + len(after_word)]\n",
+    "        temporary = temporary.replace(\"CHAPTER \",\"\")\n",
+    "        text += temporary\n",
+    "print (text[0:500]\n",
+    "```\n",
+    "\n",
+    "alice.txt\n",
+    "anne.txt\n",
+    "oz.txt\n",
+    "I.     Down the Rabbit-Hole\n",
+    " II.    The Pool of Tears\n",
+    " III.   A Caucus-Race and a Long Tale\n",
+    " IV.    The Rabbit Sends in a Little Bill\n",
+    " V.     Advice from a Caterpillar\n",
+    " VI.    Pig and Pepper\n",
+    " VII.   A Mad Tea-Party\n",
+    " VIII.  The Queen’s Croquet-Ground\n",
+    " IX.    The Mock Turtle’s Story\n",
+    " X.     The Lobster Quadrille\n",
+    " XI.    Who Stole the Tarts?\n",
+    " XII.   Alice’s Evidence\n",
+    "\n",
+    " ```\n",
+    "\n",
+    "\n"
    ]
   },
   {
