--- a/Reflection (DD).ipynb
+++ b/Reflection (DD).ipynb
@@ -56,6 +56,100 @@
     "Near the end, Coding Exercise Fourteen pertaining to Project Design allowed for experimentation toward complexity. Code was handpicked due to influence during the semester, including Dependencies (Coding Pandas), Collection (The Hollywood Reporter/IMDb), moving past the areas of development this semester indicated how coding and procedural methods would benefit from your perspectives for the future. Areas of engagement would be benefited with relation to the film and media industry with the use of media such as The Hollywood Reporter and coded example entered of IMDb. And even though I have only touched the beginning of these adaptations and coded interest of visual items to creativity applications, in the end, would present an overwhelming sense of accomplishment. As moving on has now made the realization of humanizing the configuring coding toward encoding areas that have the potential to bring in the aspects of Texts and Technology together as one. And even though the semester's challenges and guidance have enabled the process to continue, further into the future of research and self-discovery. I look forward to the overall acceptance of the unknowns toward the knowns to help aspirations take on more form humanizing structures together with less effort. Thank you!\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References:\n",
+    "\n",
+    "Benjamin, Ruha. Race after Technology: Abolitionist Tools for the New Jim Code. Polity, 2019.\n",
+    "\n",
+    "Drucker, Johanna. The Digital Humanities Coursebook an Introduction to Digital Methods for Research and Scholarship. London New York Routledge, Taylor & Francis Group, 2021.\n",
+    "\n",
+    "Folgert Karsdorp, et al. Humanities Data Analysis Case Studies with Python. Princeton Oxford Princeton University Press, 2021.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 1]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 9]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [Figure 10]"
+   ]
   }
  ],
  "metadata": {
