--- a/Reflection (DD).ipynb
+++ b/Reflection (DD).ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Final Reflection (D&D)\n",
-    "### by David Bailey"
+    "#### by David Bailey"
    ]
   },
   {
