--- a/Reflection (CC).ipynb
+++ b/Reflection (CC).ipynb
@@ -48,6 +48,94 @@
     "\n",
     "Thank you for a meaningful and rewarding semester! In the end, excitement through explorations of many of these examples inspired for continuation mainly in pedagogy development and expression, moving my remote directed research forward to help influence research and education. And considering all areas that were explored toward influencing the future. The accessible use and trials of tools brought on the positive relation to openness to exploring theories to produce shared ideas that can expand the vision for the future through the dissertation and beyond.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References/Influences\n",
+    "\n",
+    "Bissell, Evan. \"The Knotted Line: Welcome To The Knotted Line\". The Knotted Line, \n",
+    "2021, https://scalar.usc.edu/anvc/the-knotted-line/index.\n",
+    "\n",
+    "Boluk, Stephanie, and Patrick LeMieux. 2017. Metagaming: Playing, Competing, Spectating,\n",
+    "Cheating, Trading, Making, and Breaking Videogames. University of Minnesota Press.\n",
+    "\n",
+    "Cardenas, Micha. \"Electronic Literature Collection - Volume 3\". Collection.Eliterature.Org, \n",
+    "2021, https://collection.eliterature.org/3/work.html?work=redshift-and-portalmetal.\n",
+    "\n",
+    "Cong-Huyen, Anne, et al. “Buzzademia: Scholarship in The Internet Vernacular Fall \n",
+    "2019.” Hyperrhiz: New Media Cultures, no. 21, 2019. hyperrhiz.io, \n",
+    "https://doi.org/10.20415/hyp/021.\n",
+    "\n",
+    "Constanza-Chock, Sasha. Design Justice: Community-Led Practices to Build the Worlds \n",
+    "We Need.  Cambridge, MA: MIT Press, 2020.\n",
+    "\n",
+    "Crider, Jason. “Disney Death Tour: Monumentality, Augmented Reality, and Digital \n",
+    "Rhetoric.” 23.2, 15 Jan. 2019, kairos.technorhetoric.net/23.2/topoi/crider-\n",
+    "anderson/index.html. Accessed 27 Nov. 2021.\n",
+    "\n",
+    "Davidson, Cathy N. Now You See It: How Technology and Brain Science Will Transform \n",
+    "Schools and Business for the 21st Century. 2012. Open WorldCat, \n",
+    "http://lib.myilibrary.com?id=708052.\n",
+    "\n",
+    "Davis, Rebecca F, et al. “Curating Digital Pedagogy in the Humanities.” Digital \n",
+    "Pedagogy, https://digitalpedagogy.hcommons.org/introduction/.\n",
+    "\n",
+    "\"Digital Exhibitions | USC Libraries\". USC Libraries, 2021,\n",
+    " https://libraries.usc.edu/collection/digital-exhibitions.\n",
+    "\n",
+    "Flores, Leonardo. \"What Is E-Poetry?\" I E-Poetry, 1 Apr. 2015, iloveepoetry.org/?p=11968.\n",
+    "\n",
+    "Geoffrey, Carter V. n.d. “The RHIZ-Cade: Ten Multimedia Projects on the Rhetoric of Pinball.”\n",
+    " http://media.hyperrhiz.io/hyperrhiz22/sf/pinball/index.html.\n",
+    "\n",
+    "Helms, Jason. Rhizcomics: Rhetoric, Technology, and New Media Composition. University of \n",
+    "Michigan Press, 2017. Open WorldCat, \n",
+    "http://www.digitalrhetoriccollaborative.org/rhizcomics/index.html.\n",
+    "\n",
+    "Hepworth, Katherine, and Christopher Church. “Racism in the Machine: Visualization Ethics in \n",
+    "Digital Humanities Projects.” Digital Humanities Quarterly, vol. 012, no. 4, 4 Feb. \n",
+    "2019, www.digitalhumanities.org/dhq/vol/12/4/000408/000408.html.\n",
+    "\n",
+    "Hertz, Garnet. Making Critical Making. Hollywood: Telharmonium Press, 2012.\n",
+    "\n",
+    "Kazemi, Darius. NaNoGenMo, https://nanogenmo.github.io/.\n",
+    "\n",
+    "Kim, Dorothy. “Building Pleasure and the Digital Archive.” In Bodies of Information:\n",
+    " Intersectional Feminism and Digital Humanities. Minneapolis, MN: University of \n",
+    "Minnesota, 2018.\n",
+    "\n",
+    "\"Life in the Megapocalypse - Kenton Taylor Howard.\" Selfloud.net, \n",
+    "selfloud.net/Prototype/Howard/howard.html. Accessed 6 Nov. 2021.\n",
+    "\n",
+    "Losh, Elizabeth Mathews, and Jacqueline Wernimont. Bodies of Information: Intersectional \n",
+    "Feminism and Digital Humanities. University of Minnesota Press, 2018.\n",
+    "\n",
+    "Mullaney, Thomas S., Benjamin Peters, Mar Hicks, and Kavita Philip, eds. 2021. Your Computer\n",
+    " Is on Fire. Cambridge, Massachusetts; London England: The MIT Press.\n",
+    "\n",
+    "Nesbit, and Ayers. “Visualizing Emancipation Archive Site.” Dsl.richmond.edu, \n",
+    "dsl.richmond.edu/emancipation/. Accessed 27 Nov. 2021.\n",
+    "\n",
+    "Network, ARIJ. \"Black Beaches.\" Arij | arij.net/investigations/black-beaches-en/. Accessed 6 \n",
+    "Nov. 2021.\n",
+    "\n",
+    "Ratto, Matt. “Critical Making: Conceptual and Material Studies in Technology and Social \n",
+    "Life.” The Information Society, vol. 27, no. 4, July 2011, pp. 252–60. DOI.org (Crossref), \n",
+    "https://doi.org/10.1080/01972243.2011.583819.\n",
+    "\n",
+    "Sayers, Jentery, and Debbie Chachra. Making Things and Drawing Boundaries: Experiments in \n",
+    "the Digital Humanities. University of Minnesota Press, 2017.\n",
+    "\n",
+    "Skains, Lyle R. “Prelims.” Using Interactive Digital Narrative in Science and Health Education, \n",
+    "2021, pp. i-xii., https://doi.org/10.1108/978-1-83909-760-720211009.\n",
+    "\n",
+    "Sousanis, Nick. Unflattening. Harvard University Press, 2015.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
