--- a/Reflection (CC).ipynb
+++ b/Reflection (CC).ipynb
@@ -145,9 +145,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![image 1]()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "image 1.png"
+   ]
   },
   {
    "cell_type": "markdown",
