--- a/Reflection (CC).ipynb
+++ b/Reflection (CC).ipynb
@@ -145,12 +145,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "![image 1]()"
+    "![image 1](https://github.com/dlb007/D-D-/blob/master/image%201.png)"
    ]
   },
   {
