--- a/Reflection (CC).ipynb
+++ b/Reflection (CC).ipynb
@@ -125,6 +125,8 @@
     "Life.” The Information Society, vol. 27, no. 4, July 2011, pp. 252–60. DOI.org (Crossref), \n",
     "https://doi.org/10.1080/01972243.2011.583819.\n",
     "\n",
+    "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
+    "\n",
     "Sayers, Jentery, and Debbie Chachra. Making Things and Drawing Boundaries: Experiments in \n",
     "the Digital Humanities. University of Minnesota Press, 2017.\n",
     "\n",
@@ -148,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image 1](https://github.com/dlb007/D-D-/blob/master/image%201.png)"
+    "![]()"
    ]
   },
   {
