--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -22,9 +22,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### areas that brought interest\n",
-    "### then recommonded exploration -the Hollywood Reporter and IMDb (started)\n",
-    "### Then interest toward future (images bonus)"
+    "### References:\n",
+    "\n",
+    "Benjamin, Ruha. Race after Technology: Abolitionist Tools for the New Jim Code. Polity, 2019.\n",
+    "\n",
+    "Dombrowski, Quinn, et al. “Introduction to Jupyter Notebooks.” Programming Historian, 8 Dec. 2019, https://programminghistorian.org/en/lessons/jupyter-notebooks.\n",
+    "\n",
+    "Drucker, Johanna. The Digital Humanities Coursebook an Introduction to Digital Methods for Research and Scholarship. London New York Routledge, Taylor & Francis Group, 2021.\n",
+    "\n",
+    "Folgert Karsdorp, et al. Humanities Data Analysis Case Studies with Python. Princeton Oxford Princeton University Press, 2021.\n",
+    "\n",
+    "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
+    "\n",
+    "Turkel, William J., and Adam Crymble. “Code Reuse and Modularity in Python.” Programming Historian, 17 July 2012, https://programminghistorian.org/en/lessons/code-reuse-and-modularity.\n",
+    "\n",
+    "Weingart, Scott. “Doing Bayesian Data Analysis.” The Scottbot Irregular, http://www.scottbot.net/HIAL/index.html@p=8237.html.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initial areas that brought interest, \n",
+    "were from the module exploration and journey through the beginning of code to the more potent resolve of visualized expression toward the end of the semester.\n"
    ]
   },
   {
@@ -33,12 +53,27 @@
    "source": [
     "### Basics Assignment #1\n",
     "\n",
+    "Informative with the fundamental compilations presented value experimenting from Coding Exercise One, famed \"Hello World\" \n",
+    "\n",
+    "```\n",
+    "f = open('helloworld.txt','w')\n",
+    "f.write('hello world')\n",
+    "f.close()\n",
     "\n",
     "```\n",
     "\n",
+    "```\n",
+    "f = open('helloworld.txt','r')\n",
+    "message = f.read()\n",
+    "print(message)\n",
+    "f.close()\n",
     "\n",
     "```\n",
-    "\n",
+    "hello world\n",
+    "```\n",
+    "```\n",
+    "hello again\n",
+    "```\n",
     "\n"
    ]
   },
@@ -48,7 +83,7 @@
    "source": [
     "### Basics Assignment #2\n",
     "\n",
-    "First, import the libraries you need for reading in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for your work: this can be anything, but will work best if it's a static site (not a social media hashtag, etc.)\n",
+    "Then toward the importing the libraries you need for reading in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for your work: this can be anything, but will work best if it's a static site (not a social media hashtag, etc.)\n",
     "\n",
     "```\n",
     "import urllib.request, urllib.error, urllib.parse\n",
@@ -99,7 +134,7 @@
     "\n",
     "### Basics Assignment #4\n",
     "\n",
-    "Next, we'll use stop words to remove all the words that we don't want to include in our count. There are suggested words in this week's readings, \n",
+    "Then we'll use stop words to remove all the words that we don't want to include in our count. There are suggested words in this week's readings, \n",
     "but you can also generate a custom list based on your topic. Define the stop words in an array, \n",
     "and use a loop to remove any word in your bag of words that also appears on the stop words list (use the examples in Dictionaries for guidance.)\n",
     "\n",
@@ -124,9 +159,7 @@
     "\n",
     "\n",
     "\n",
-    "Bonus: Export a Meaningful Visualization\n",
-    "\n",
-    "Since I had success with the pie chart aspects above, I decided to bring familiarity toward the Bonus area toward meaningful visualization. As s result, incorporating other sites to illustrate allowed for a way to secure the figure (get_figure) from my past familiarity with the pie aspects from challenge #4. Then by bringing in the coded command (savefig) to help create a workable range of filetypes, including an increased parameter to allow the freedom of text to be expanded with minor limitations within the visual.\n",
+    "Bonus: Export a Meaningful Visualization, since I had success with the pie chart aspects above, I decided to bring familiarity toward the Bonus area toward meaningful visualization. As s result, incorporating other sites to illustrate allowed for a way to secure the figure (get_figure) from my past familiarity with the pie aspects from challenge #4. Then by bringing in the coded command (savefig) to help create a workable range of filetypes, including an increased parameter to allow the freedom of text to be expanded with minor limitations within the visual.\n",
     "\n",
     "```\n",
     "fig = df['title'][0:10].value_counts().plot(kind='pie', title='Top 10 Films').get_figure()\n",
@@ -270,7 +303,7 @@
     "    ```\n",
     "    \n",
     "\n",
-    "    ```\n",
+    "\n",
     "    documents, titles = load_directory(textdir)\n",
     "import sklearn.feature_extraction.text as text\n",
     "print(titles[0:6])\n",
@@ -469,7 +502,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Overview: IMDb\n",
+    "## Project Overview: IMDb (Exploration interest and discovery from The Hollywood Reporter coded interest to the overall IMDb (started) research.\n",
+    "\n",
     "I wanted to explore an area that interested me in this semester's journey. The project was inspired by the basics and areas that began to form great interest. The framework explored all factors that, in many ways, related to my dissertational focus on remote directing references and experiences.  And to benefit this approach, forms related to procedural formulation was expanded toward a new area with the basics of trial and error toward expansion into the unknown to help explore and benefit the cinema industry of relatable entities exist guided by the project's directive to \"Spend the month ...writing code that generates a novel of 50k+ words.\" Which is a unique way to help generate and explore a good thought process toward the project's goals.  In the end, in this case using Beautiful Soup, I wanted to show the process of bringing in the elements scraped from IMDb data toward the start of this inquiry.\n",
     "\n"
    ]
@@ -1024,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, moving on to help sybolize the process I wanted to explore IMDb's known avenue of Chart Toppers of film information.  Here it was expanded from \"bs4 import BeautifulSoup\" with the benefits of \"requests\" and \"re.\" Which helped the progress embark upon an URL focus \"http://www.imdb.com/chart/top.\" And allowed for a strategy to draw upon areas of interest and altered \"Movies, Links, Crew, Ratings, Votes, etc.\""
+    "Then, moving on to help sybolize the process, toward a more exploratory interest toward future (images bonus). I wanted to explore IMDb's known avenue of Chart Toppers of film information.  Here it was expanded from \"bs4 import BeautifulSoup\" with the benefits of \"requests\" and \"re.\" Which helped the progress embark upon an URL focus \"http://www.imdb.com/chart/top.\" And allowed for a strategy to draw upon areas of interest and altered \"Movies, Links, Crew, Ratings, Votes, etc.\""
    ]
   },
   {
@@ -1050,14 +1084,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Downloading imdb top 250 movie's data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Collection: Where is your data coming from?"
+    "Collection: Where is your data coming from?\n",
+    "In this case, there was an opening toward understanding of how to download IMDb's option to toward a top realm of movie data."
    ]
   },
   {
